color adjustments. fix color on share links. add max width to p. fix alignments

--- a/css/main.scss
+++ b/css/main.scss
@@ -44,6 +44,7 @@ $color-pdxwit-red: #E03A47;
 $color-yellow: #E1ED67;
 $color-dark-green: #244512;
 $color-grey: #D0D0D0;
+$color-dark-grey-black: #191919; //dark grey black for font on white background
 
 
 // =====================
@@ -111,7 +112,7 @@ $color-grey: #D0D0D0;
   }
 
   .navbar-links {
-      color:  $color-pdxwit-black;
+      color:  $color-dark-grey-black;
       text-align: center;
       padding-right: 1em;
       font-size: 15px;
@@ -257,7 +258,7 @@ html,body{
 }
 
 .font-h2--dark {
-  color: $color-pdxwit-black;
+  color: $color-dark-grey-black;
 }
 
 .font-h2--black {
@@ -288,7 +289,7 @@ html,body{
 }
 
 .font-h3--dark {
-  color: $color-pdxwit-black;
+  color: $color-dark-grey-black;
 }
 
 h4 {
@@ -389,10 +390,11 @@ h4 {
   @include breakpoint(lg) {
     font-size: 20px;
   }
+  max-width: 960px;
 }
 
 .font-p--dark {
-  color: $color-pdxwit-black;
+  color: $color-dark-grey-black;
 }
 
 .font-p--italic {
@@ -415,6 +417,10 @@ h4 {
   font-weight: $font-weight-regular;
 }
 
+.color-emphasis-white {
+  color: $color-pdxwit-white;
+}
+
 .section-break {
   padding-top: 2em;
 }
@@ -429,7 +435,7 @@ h4 {
   display: block;
   justify-content: center;
   margin: auto;
-  color: $color-pdxwit-black;
+  color: $color-dark-grey-black;
   font-weight: $font-weight-semibold;
   font-family: $font-h3s;
   font-size: 9px;
@@ -445,14 +451,14 @@ h4 {
    font-family: $font-ps;
    font-weight: $font-weight-regular;
    margin: auto;
-   color: $color-pdxwit-black
+   color: $color-dark-grey-black;
  }
 }
 
 .icon {
   @include btn-theme();
   display: inline-block;
-  color: $color-pdxwit-black;
+  color: $color-dark-grey-black;
   font-weight: $font-weight-light;
   font-family: $font-h3s;
   font-size: 10px;
@@ -485,26 +491,36 @@ h4 {
    @include breakpoint(lg) {
      padding-top: 3em;
    }
-   height: 40px;
+   @include breakpoint(xl) {
+     padding-top: 3em;
+   }
+   height: 60px;
    @include breakpoint(md) {
-     height: 80px;
+     height: 100px;
    }
    @include breakpoint(lg) {
      height: 120px;
+   }
+   @include breakpoint(xl) {
+     height: 150px;
    }
    .peopleImage {
      height: 100%;
    }
    .peopleImage--lg {
-     height: 40px;
+     height: 35px;
      padding-right: .3em;
      @include breakpoint(md) {
-       height: 87px;
+       height: 100px;
        padding-right: .8em;
      }
      @include breakpoint(lg) {
-       height: 120px;
+       height: 130px;
        padding-right: 1em;
+     }
+     @include breakpoint(xl) {
+       height: 150px;
+       padding-right: 1.2em;
      }
    }
  }
@@ -632,6 +648,14 @@ h4 {
   padding: 0;
 }
 
+.line-style {
+  height: 12px;
+  width: 50%;
+  border: 0;
+  box-shadow: inset 0 12px 12px -12px $color-pdxwit-lime;
+  margin: 0;
+  align-self: center;
+}
 // =====================
 // Charts
 // =====================
